tests/ui/mismatched_types/similar_paths.stderr
error[E0308]: mismatched types
  --> $DIR/similar_paths.rs:7:5
   |
LL | pub fn foo() -> Option<u8> {
   |                 ---------- expected `Option<u8>` because of return type
LL |     Some(42_u8)
   |     ^^^^^^^^^^^ expected `Option<u8>`, found `std::option::Option<u8>`
   |
   = note: expected enum `Option<u8>`
              found enum `std::option::Option<u8>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
